--- a/QueUp/Base.lproj/Main.storyboard
+++ b/QueUp/Base.lproj/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -15,13 +16,73 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="TlU-X9-dM2" customClass="HomeFormView" customModule="QueUp" customModuleProvider="target">
+                                <rect key="frame" x="107.5" y="351.5" width="199" height="193"/>
+                                <subviews>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="V5W-BY-HVe">
+                                        <rect key="frame" x="0.0" y="0.0" width="199" height="32"/>
+                                        <segments>
+                                            <segment title="JOIN ROOM"/>
+                                            <segment title="HOST ROOM"/>
+                                        </segments>
+                                        <connections>
+                                            <action selector="selectedSegmentDidChange:" destination="TlU-X9-dM2" eventType="valueChanged" id="0nf-q2-yhL"/>
+                                        </connections>
+                                    </segmentedControl>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="DISPLAY NAME" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="i6V-XK-sX7">
+                                        <rect key="frame" x="0.0" y="39" width="199" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                        <connections>
+                                            <action selector="displayNameTextFieldDidChange:" destination="TlU-X9-dM2" eventType="editingChanged" id="Cmv-gU-PGt"/>
+                                        </connections>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="ROOM CODE" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tDT-fS-9Cv">
+                                        <rect key="frame" x="0.0" y="81" width="199" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                        <connections>
+                                            <action selector="roomCodeTextFieldDidChange:" destination="TlU-X9-dM2" eventType="editingChanged" id="b0f-Yp-TkD"/>
+                                        </connections>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7AK-5A-rhZ">
+                                        <rect key="frame" x="0.0" y="123" width="199" height="31"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="JOIN"/>
+                                        <connections>
+                                            <action selector="joinButtonPressed:" destination="TlU-X9-dM2" eventType="touchUpInside" id="Nz4-Sf-6fM"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eKL-hW-4sK">
+                                        <rect key="frame" x="0.0" y="162" width="199" height="31"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="HOST"/>
+                                        <connections>
+                                            <action selector="hostButtonPressed:" destination="TlU-X9-dM2" eventType="touchUpInside" id="fHQ-pR-OFP"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <connections>
+                                    <outlet property="displayNameTextField" destination="i6V-XK-sX7" id="gh8-96-mqc"/>
+                                    <outlet property="hostButton" destination="eKL-hW-4sK" id="LiX-5b-GwD"/>
+                                    <outlet property="joinButton" destination="7AK-5A-rhZ" id="Dub-Kl-2kZ"/>
+                                    <outlet property="roomCodeTextField" destination="tDT-fS-9Cv" id="Y6F-Ch-knH"/>
+                                    <outlet property="segmentedControl" destination="V5W-BY-HVe" id="e6Z-tC-pbn"/>
+                                </connections>
+                            </stackView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="TlU-X9-dM2" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="nOU-a8-iY9"/>
+                            <constraint firstItem="TlU-X9-dM2" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="vVy-aa-mhW"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="139" y="138"/>
+            <point key="canvasLocation" x="323" y="92"/>
         </scene>
     </scenes>
     <resources>
