--- a/QueUp/StoryBoard/Base.lproj/Main.storyboard
+++ b/QueUp/StoryBoard/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="mnz-Jm-FVh">
     <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -79,18 +79,147 @@
                             <constraint firstItem="TlU-X9-dM2" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="vVy-aa-mhW"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="hrF-zD-mS3"/>
                     <connections>
                         <outlet property="homeFormView" destination="TlU-X9-dM2" id="SYW-Qz-WeZ"/>
+                        <segue destination="KqR-Jk-JGJ" kind="show" identifier="PlaylistViewController" id="Cx7-p1-aTU"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="323" y="92"/>
+            <point key="canvasLocation" x="1250.7692307692307" y="91.706161137440759"/>
+        </scene>
+        <!--Playlist View Controller-->
+        <scene sceneID="6z7-By-rFC">
+            <objects>
+                <viewController id="KqR-Jk-JGJ" customClass="PlaylistViewController" customModule="QueUp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Yrx-Vj-9rn">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="nkd-Ur-7Yi">
+                                <rect key="frame" x="0.0" y="88" width="390" height="756"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <view key="tableHeaderView" contentMode="scaleToFill" id="uJD-xH-LBd">
+                                    <rect key="frame" x="0.0" y="0.0" width="390" height="1"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                </view>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="PlaylistTableViewCell" rowHeight="68" id="UX8-MF-f0z" customClass="PlaylistTableViewCell" customModule="QueUp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="50" width="390" height="68"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="UX8-MF-f0z" id="XgF-v3-q5w">
+                                            <rect key="frame" x="0.0" y="0.0" width="390" height="68"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="egt-lX-uqD">
+                                                    <rect key="frame" x="20" y="4" width="60" height="60"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="60" id="LKW-1b-kcc"/>
+                                                        <constraint firstAttribute="width" constant="60" id="y1a-0Z-et7"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="ms1-qx-lE0">
+                                                    <rect key="frame" x="95" y="3.6666666666666679" width="275" height="60.666666666666657"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Song" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lbq-VX-SGI">
+                                                            <rect key="frame" x="0.0" y="0.0" width="275" height="23.333333333333332"/>
+                                                            <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Artists" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oAH-ke-xHu">
+                                                            <rect key="frame" x="0.0" y="23.333333333333329" width="275" height="20.666666666666671"/>
+                                                            <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="15"/>
+                                                            <color key="textColor" systemColor="secondaryLabelColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Added By " lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wkC-6N-oxL">
+                                                            <rect key="frame" x="0.0" y="44" width="275" height="16.666666666666671"/>
+                                                            <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="12"/>
+                                                            <color key="textColor" systemColor="tintColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                </stackView>
+                                            </subviews>
+                                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                            <constraints>
+                                                <constraint firstItem="ms1-qx-lE0" firstAttribute="leading" secondItem="egt-lX-uqD" secondAttribute="trailing" constant="15" id="1FV-zw-e25"/>
+                                                <constraint firstItem="egt-lX-uqD" firstAttribute="centerY" secondItem="XgF-v3-q5w" secondAttribute="centerY" id="6MG-nC-e1h"/>
+                                                <constraint firstItem="egt-lX-uqD" firstAttribute="leading" secondItem="XgF-v3-q5w" secondAttribute="leading" constant="20" symbolic="YES" id="ulH-iL-sJi"/>
+                                                <constraint firstAttribute="trailing" secondItem="ms1-qx-lE0" secondAttribute="trailing" constant="20" id="wSj-I1-Gvg"/>
+                                                <constraint firstItem="ms1-qx-lE0" firstAttribute="centerY" secondItem="XgF-v3-q5w" secondAttribute="centerY" id="zGI-zS-eFQ"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="addedByMemberLabel" destination="wkC-6N-oxL" id="R9g-8k-Xqd"/>
+                                            <outlet property="albumImageView" destination="egt-lX-uqD" id="RO3-uZ-Y6y"/>
+                                            <outlet property="artistNamesLabel" destination="oAH-ke-xHu" id="DxY-zC-Emz"/>
+                                            <outlet property="songTitleLabel" destination="Lbq-VX-SGI" id="rku-Ir-D2M"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IA3-7g-vvJ">
+                                <rect key="frame" x="152" y="404" width="86" height="36"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="Add Songs"/>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="rmL-cH-SjV"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="nkd-Ur-7Yi" firstAttribute="top" secondItem="rmL-cH-SjV" secondAttribute="top" id="85g-WZ-xzP"/>
+                            <constraint firstItem="IA3-7g-vvJ" firstAttribute="centerX" secondItem="Yrx-Vj-9rn" secondAttribute="centerX" id="W3k-WQ-bF0"/>
+                            <constraint firstAttribute="bottom" secondItem="nkd-Ur-7Yi" secondAttribute="bottom" id="f0z-2P-M39"/>
+                            <constraint firstItem="nkd-Ur-7Yi" firstAttribute="trailing" secondItem="rmL-cH-SjV" secondAttribute="trailing" id="tmV-Uz-RIS"/>
+                            <constraint firstItem="nkd-Ur-7Yi" firstAttribute="leading" secondItem="rmL-cH-SjV" secondAttribute="leading" id="xe4-cx-zOo"/>
+                            <constraint firstItem="IA3-7g-vvJ" firstAttribute="centerY" secondItem="Yrx-Vj-9rn" secondAttribute="centerY" id="zaL-US-0yQ"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="A3O-wR-e0O">
+                        <rightBarButtonItems>
+                            <barButtonItem image="ellipsis" catalog="system" id="5UB-gA-EzB"/>
+                            <barButtonItem id="TKu-ad-zTY"/>
+                        </rightBarButtonItems>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UZj-n4-Woq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2030.7692307692307" y="91.706161137440759"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="9fw-YH-zTI">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="mnz-Jm-FVh" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="2tw-8D-RAI">
+                        <rect key="frame" x="0.0" y="44" width="390" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="PZH-6y-QUT"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FGt-NN-IhB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="460" y="92"/>
         </scene>
     </scenes>
     <resources>
+        <image name="ellipsis" catalog="system" width="128" height="37"/>
+        <systemColor name="secondaryLabelColor">
+            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="tintColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
