--- a/QueUp/StoryBoard/Base.lproj/Main.storyboard
+++ b/QueUp/StoryBoard/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="mnz-Jm-FVh">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="KqR-Jk-JGJ">
     <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -135,7 +135,7 @@
                                                             <color key="textColor" systemColor="secondaryLabelColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Added By " lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wkC-6N-oxL">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Added By User" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wkC-6N-oxL">
                                                             <rect key="frame" x="0.0" y="44" width="275" height="16.666666666666671"/>
                                                             <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="12"/>
                                                             <color key="textColor" systemColor="tintColor"/>
@@ -154,8 +154,8 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <outlet property="addedByMemberLabel" destination="wkC-6N-oxL" id="R9g-8k-Xqd"/>
-                                            <outlet property="albumImageView" destination="egt-lX-uqD" id="RO3-uZ-Y6y"/>
+                                            <outlet property="addedByUserLabel" destination="wkC-6N-oxL" id="fui-GW-ZFf"/>
+                                            <outlet property="albumImageView" destination="egt-lX-uqD" id="b7A-j3-YvU"/>
                                             <outlet property="artistNamesLabel" destination="oAH-ke-xHu" id="DxY-zC-Emz"/>
                                             <outlet property="songTitleLabel" destination="Lbq-VX-SGI" id="rku-Ir-D2M"/>
                                         </connections>
@@ -167,6 +167,9 @@
                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <state key="normal" title="Add Songs"/>
+                                <connections>
+                                    <action selector="addSongButtonPressed:" destination="KqR-Jk-JGJ" eventType="touchUpInside" id="cUh-rX-vWL"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="rmL-cH-SjV"/>
@@ -186,6 +189,10 @@
                             <barButtonItem id="TKu-ad-zTY"/>
                         </rightBarButtonItems>
                     </navigationItem>
+                    <connections>
+                        <outlet property="addSongButton" destination="IA3-7g-vvJ" id="qrp-wk-f1R"/>
+                        <outlet property="tableView" destination="nkd-Ur-7Yi" id="bdl-Xa-M3M"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UZj-n4-Woq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
