--- a/QueUp/StoryBoard/Base.lproj/Main.storyboard
+++ b/QueUp/StoryBoard/Base.lproj/Main.storyboard
@@ -557,10 +557,10 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9b5-d6-Bdn">
-                                                    <rect key="frame" x="298" y="4" width="32" height="36"/>
+                                                    <rect key="frame" x="278" y="4" width="52" height="36"/>
                                                     <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
                                                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                                    <state key="normal" title="Link"/>
+                                                    <state key="normal" title="Linked"/>
                                                     <connections>
                                                         <action selector="linkStatusButtonPressed:" destination="MKL-sD-0zo" eventType="touchUpInside" id="us7-jz-rja"/>
                                                     </connections>
@@ -570,8 +570,8 @@
                                                 <constraint firstItem="udq-2M-TTA" firstAttribute="leading" secondItem="MZZ-AO-cvs" secondAttribute="leading" constant="20" symbolic="YES" id="DKq-rn-8OR"/>
                                                 <constraint firstAttribute="trailing" secondItem="9b5-d6-Bdn" secondAttribute="trailing" constant="20" symbolic="YES" id="OJw-jl-BiI"/>
                                                 <constraint firstItem="udq-2M-TTA" firstAttribute="centerY" secondItem="MZZ-AO-cvs" secondAttribute="centerY" id="TzP-Di-XEH"/>
-                                                <constraint firstItem="9b5-d6-Bdn" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="udq-2M-TTA" secondAttribute="trailing" constant="8" symbolic="YES" id="cfx-DY-Mvl"/>
                                                 <constraint firstItem="9b5-d6-Bdn" firstAttribute="centerY" secondItem="MZZ-AO-cvs" secondAttribute="centerY" id="nbh-FA-1ll"/>
+                                                <constraint firstItem="9b5-d6-Bdn" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="udq-2M-TTA" secondAttribute="trailing" constant="8" symbolic="YES" id="znr-0K-wE6"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
